# Picaso

./: .gitignore  LICENSE  README.md  docker-compose.yml  local_docker-compose.yml
nginx/: nginx.conf
picaso/: Dockerfile  pyproject.toml
picaso/picaso/api/: urls.py
picaso/picaso/config/: settings.py  tests.py
picaso/picaso/files/: models.py  serializers.py  tasks.py  upload.py  urls.py  views.py
picaso/picaso/files/migrations/: 0001_initial.py
