[tool.poetry]
name = "picaso"
version = "0.1.0"
description = ""
authors = ["Симонов Алексей <alxxalxx@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.14.0"
celery = "^5.3.6"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
django = "4.2.8"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
